@@ -448,7 +448,6 @@
     "*://*.newstatesman.com/*",
     "*://*.newsweek.com/*",
     "*://*.newyorker.com/*",
-    "*://*.niagarafallsreview.ca/*",
     "*://*.nicematin.com/*",
     "*://*.nikkei.com/*",
     "*://*.nj.com/*",
@@ -573,7 +572,6 @@
     "*://*.startribune.com/*",
     "*://*.statesman.com/*",
     "*://*.statista.com/*",
-    "*://*.stcatharinesstandard.ca/*",
     "*://*.stocknews.com/*",
     "*://*.studocu.com/*",
     "*://*.stuttgarter-zeitung.de/*",
@@ -623,13 +621,10 @@
     "*://*.thenation.com/*",
     "*://*.thenewatlantis.com/*",
     "*://*.theneweuropean.co.uk/*",
-    "*://*.thepeterboroughexaminer.com/*",
     "*://*.thepointmag.com/*",
     "*://*.theprovince.com/*",
     "*://*.thequint.com/*",
-    "*://*.therecord.com/*",
     "*://*.thesaturdaypaper.com.au/*",
-    "*://*.thespec.com/*",
     "*://*.thespectator.com/*",
     "*://*.thestar.com.my/*",
     "*://*.thestar.com/*",
@@ -681,7 +676,6 @@
     "*://*.watoday.com.au/*",
     "*://*.waz.de/*",
     "*://*.weeklytimesnow.com.au/*",
-    "*://*.wellandtribune.ca/*",
     "*://*.westernadvocate.com.au/*",
     "*://*.westfalen-blatt.de/*",
     "*://*.wiesbadener-kurier.de/*",
@@ -746,5 +740,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.4.4"
+  "version": "3.2.4.5"
 }
